--- a/RELEASENOTES.html
+++ b/RELEASENOTES.html
@@ -5,18 +5,31 @@
 
 <h3>Joomla! versions supported</h3>
 <p>
-	We only officially support using our software with the latest Joomla! release branch, 3.9. We strongly advise you to run the latest available version of Joomla! for security reasons. Older versions of Joomla! have known major security issues which are being actively exploited to hack sites.
+	We only officially support using our software with the latest Joomla! release branch, 3.9. We strongly advise you to
+	run the latest available version of Joomla! for security reasons. Older versions of Joomla! have known major
+	security issues which are being actively exploited to hack sites.
 </p>
 <p>
-	Our software should run on Joomla 4.0 which is currently in Beta. Please note that Joomla 4 is not stable yet. It
-	should not be used on production sites. Some breakage is expected; we are working on fixing issues on Joomla 4 but
-	it may take a while since it's still changing, albeit not at the rate it was changing pre-Beta.
+	We offer limited support for Joomla 4.0 which is currently in Beta. Akeeba Ticket System will work on it but there
+	may be some minor or bigger issues. We try to discover and address them. The biggest challenge is that Joomla 4 is
+	still undergoing changes, despite being labeled Beta, which may introduce new issues on each release. We do not
+	plan on offering full support for Joomla 4 until it reaches at least the Release Candidate 1 stage.
+</p>
+<p>
+	Support for Joomla 3.10 is currently considered experimental. At the time of this writing Joomla 3.10 is in a pre-production, alpha state. We strongly advise you to NOT use Joomla 3.10. Like all new Joomla 3 version families we plan on supporting it as soon as it reaches stable status.
 </p>
 
 <h3>PHP versions supported</h3>
 <p>
-	We only officially support using our software with PHP 7.1, 7.2, 7.3 or 7.4. We strongly advise you to run the latest available version of PHP on a branch currently maintained by the PHP project for security reasons. Older versions of PHP have known major security issues which are being actively exploited to hack sites and they have stopped receiving security updates, leaving you exposed to these issues.
+	We only officially support using our software with PHP 7.1, 7.2, 7.3 or 7.4. We strongly advise you to run the
+	latest available version of PHP on a branch currently maintained by the PHP project for security reasons. Older
+	versions of PHP have known major security issues which are being actively exploited to hack sites and they have
+	stopped receiving security updates, leaving you exposed to these issues.
 </p>
 <p>
-	Please note that earlier PHP versions including but not limited to PHP 5.3, 5.4, 5.5, 5.6 and 7.0 are no longer supported and our software no longer works on them.
+	At the time of this writing we have extensively tested our software with PHP 8 on both Joomla 3 and 4. However, PHP 8 is sill in a pre-release state and not officially supported by Joomla. As a result we consider PHP 8 support tentative. We expect to be able to officially support PHP 8 around 2-4 weeks after Joomla implements full PHP 8 compatibility. PHP 8 itself is scheduled for release on November 26th. Our prediction for full PHP 8 support is before the end of January 2021, as long as Joomla adds support for it by end December 2020.
+</p>
+<p>
+	Please note that earlier PHP versions including but not limited to PHP 5.3, 5.4, 5.5, 5.6 and 7.0 are no longer
+	supported and our software no longer works on them.
 </p>
