--- a/RELEASENOTES.html
+++ b/RELEASENOTES.html
@@ -1,35 +1,17 @@
 <h3>What's new?</h3>
+
+<p>
+	<strong>Updated for Joomla 4 beta 7</strong>.
+	This release addresses compatibility issues with Joomla 3 beta 7. Please only use the Joomla 4 method for inhjecting the social login buttons on Joomla 4. Disabling that option will result in the buttons being inserted twice. This is a known issue we are not going to address (it's only meant as a stop-gap for Joomla 3 which lacks support for additional login buttons).
+</p>
+
 <p>
 	<strong>Bug fixes and minor improvements</strong>. Please take a look at the CHANGELOG below.
 </p>
 
-<h3>Joomla! versions supported</h3>
+<h3>Joomla and PHP versions supported</h3>
 <p>
-	We only officially support using our software with the latest Joomla! release branch, 3.9. We strongly advise you to run the latest available version of Joomla! for security reasons. Older versions of Joomla! have known major security issues which are being actively exploited to hack sites.
-</p>
-<p>
-	We offer limited support for Joomla 4.0 which is currently in Beta. Akeeba Ticket System will work on it but there may be some minor or bigger issues. We try to discover and address them. The biggest challenge is that Joomla 4 is still undergoing changes, despite being labeled Beta, which may introduce new issues on each release. We do not plan on offering full support for Joomla 4 until it reaches at least the Release Candidate 1 stage.
-</p>
-<p>
-	Support for Joomla 3.10 is currently considered experimental. At the time of this writing Joomla 3.10 is in a pre-production, alpha state. We strongly advise you to NOT use Joomla 3.10. Like all new Joomla 3 version families we plan on supporting it as soon as it reaches stable status.
-</p>
-
-<h3>PHP versions supported</h3>
-<p>
-	We only officially support using our software with PHP 7.2, 7.3, 7.4 or 8.0.
-</p>
-<p>
-	While our software still runs on PHP 7.2, this versions of PHP is declared End of Life by the PHP project and no longer receives any security updates. We are no longer testing our software with these PHP versions and we strongly advise you to not use them on production sites.
-</p>
-<p>
-	We strongly advise you to run either of the two latest available version branches of PHP on a branch currently maintained by the PHP project for security and performance reasons. Older versions of PHP have known major security issues which are being actively exploited to hack sites and they have stopped receiving security updates, leaving you exposed to these issues. Moreover, they are slower, therefore consuming more server resources to perform the same tasks.
-</p>
-<p>
-	Please note that PHP 8.0 is, at the time of this writing, a very new PHP version which brings major changes to the PHP language. We strongly recommend holding off updating into it until April 2021 and only doing so after confirming that all of your extensions have been updated to support it. Do note that by “all extensions” we mean components, plugins, modules and <em>templates</em>.
-</p>
-<p>
-	Finally, please bear in mind that earlier PHP versions including but not limited to all PHP 4.x and 5.x versions, as well as PHP 7.0 anmd 7.1 are no longer supported. Our software no longer works on these old, unsupported versions of PHP. All of these versions of PHP have been end of life for several years. We <em>VERY STRONGLY</em> recommend upgrading to a version of PHP that's currently supported by the PHP project.
-</p>
-<p>
-	Our policy with regards to PHP version support is to officially support the PHP versions that the PHP project itself considers a <a href="https://www.php.net/supported-versions">Currently Supported version</a>, i.e. all versions of PHP in the Active Support and Security Support phase. We will show you a warning when we detect a PHP version that has entered Security Support so you have the chance to plan and implement a PHP version update. After a PHP versions becomes <a href="https://www.php.net/eol.php">End of Life (EOL)</a> we will only support it for a further 6 to 9 months. If we detect such a version we will show you a message so you can urgently plan and implement a PHP version update. After 6 to 9 months after a PHP version becomes EOL we may stop providing support for it without any prior notice. We also track the development of new versions of PHP. New versions of PHP will be unofficially supported sometime during their Release Candidate phase and fully supported about 4 to 8 weeks after the first stable version of that branch is officially released by the PHP project. Your site's participation in the opt-out usage statistics helps us collect anonymous information about the use of PHP versions on your sites and decide when to withdraw support for EOL versions of PHP.
+	Please consult our <a href="https://www.akeeba.com/compatibility.html">Compatibility page</a> to see which
+	PHP and CMS versions are supported by each version of our software. This page is generated from the metadata
+	attached to each version as it is released on our site.
 </p>
