--- a/RELEASENOTES.html
+++ b/RELEASENOTES.html
@@ -1,17 +1,11 @@
 <h3>What's new?</h3>
-
-<p>
-	<strong>Updated for Joomla 4 beta 7</strong>.
-	This release addresses compatibility issues with Joomla 3 beta 7. Please only use the Joomla 4 method for inhjecting the social login buttons on Joomla 4. Disabling that option will result in the buttons being inserted twice. This is a known issue we are not going to address (it's only meant as a stop-gap for Joomla 3 which lacks support for additional login buttons).
-</p>
-
 <p>
 	<strong>Bug fixes and minor improvements</strong>. Please take a look at the CHANGELOG below.
 </p>
 
-<h3>Joomla and PHP versions supported</h3>
+<h3>Joomla! and PHP versions supported</h3>
 <p>
-	Please consult our <a href="https://www.akeeba.com/compatibility.html">Compatibility page</a> to see which
-	PHP and CMS versions are supported by each version of our software. This page is generated from the metadata
-	attached to each version as it is released on our site.
+	Please consult <a href="https://www.akeeba.com/compatibility.html">our Compatibility page</a>. It explains
+	our version support policy and lists which versions of our software are compatible with which versions of
+	Joomla and PHP.
 </p>
