--- a/RELEASENOTES.html
+++ b/RELEASENOTES.html
@@ -1,6 +1,19 @@
-<h3>What's new?</h3>
+<h3>What's new</h3>
+
+<p>
+	<strong>Rewritten with Joomla 4 Core MVC and Bootstrap 5 styling</strong>.
+	This is a native Joomla 4 extension, written using the core Joomla 4 MVC API and using Bootstrap 5 styling. The database schema management is also core Joomla as are the extension updates.
+</p>
+
+<!--
 <p>
 	<strong>Bug fixes and minor improvements</strong>. Please take a look at the CHANGELOG below.
+</p>
+-->
+
+<h3>Joomla 4 only</h3>
+<p>
+	This version will only run on Joomla 4. The previous version will no longer be updated, only maintained minimally to let you upgrade from Joomla 3 to Joomla 4 without losing previously registered users.
 </p>
 
 <h3>Joomla! and PHP versions supported</h3>
