--- a/RELEASENOTES.html
+++ b/RELEASENOTES.html
@@ -1,12 +1,10 @@
 <h3>What's new</h3>
 
 <p>
-	<strong>Bug fixes and minor improvements</strong>. Please take a look at the CHANGELOG below.
+	<strong>Requires Joomla 4.2 and PHP 7.4 or later</strong>. We have dropped support for earlier versions of Joomla and PHP to do the preliminary work necessary for compatibility with Joomla 5.0, with a target release date of October 2023. According to our collected usage statistics Joomla 4.0, 4.1 and PHP versions 7.2, 7.3 make up for less than 1.5% of our users.
 </p>
-
-<h3>Joomla 4 only</h3>
 <p>
-	This version will only run on Joomla 4. The previous version will no longer be updated, only maintained minimally to let you upgrade from Joomla 3 to Joomla 4 without losing previously registered users.
+	<strong>Bug fixes and minor improvements</strong>. Please take a look at the CHANGELOG below.
 </p>
 
 <h3>Joomla! and PHP versions supported</h3>
