Removed Twitter integration (gh-93)

--- a/RELEASENOTES.html
+++ b/RELEASENOTES.html
@@ -1,11 +1,13 @@
 <h3>What's new</h3>
 
 <p>
-	<strong>Requires Joomla 4.2 and PHP 7.4 or later</strong>. We have dropped support for earlier versions of Joomla and PHP to do the preliminary work necessary for compatibility with Joomla 5.0, with a target release date of October 2023. According to our collected usage statistics Joomla 4.0, 4.1 and PHP versions 7.2, 7.3 make up for less than 1.5% of our users.
+	<strong>Removed Twitter integration</strong>. Twitter has now made it impossible to use it for logging in a user on the web without using Twitter's JavaScript library which invades user privacy, therefore nullifying the reason of SocialLogin's existence. As a result, the Twitter integration is now removed.
 </p>
+<!--
 <p>
 	<strong>Bug fixes and minor improvements</strong>. Please take a look at the CHANGELOG below.
 </p>
+-->
 
 <h3>Joomla! and PHP versions supported</h3>
 <p>
