--- a/RELEASENOTES.html
+++ b/RELEASENOTES.html
@@ -1,11 +1,9 @@
 <h3>What's new</h3>
 
 <p>
-	<strong>Synology SSO support</strong>.
+	<strong>Login with Spotify</strong>.
 </p>
 
-<!--
 <p>
 	<strong>Bug fixes and minor improvements</strong>. Please take a look at the CHANGELOG below.
 </p>
--->
