+ Login with PayPal

--- a/RELEASENOTES.html
+++ b/RELEASENOTES.html
@@ -5,6 +5,10 @@
 </p>
 
 <p>
+	<strong>Login with PayPal</strong>. Contributed by @neo191987, heavily modified and documented by us.
+</p>
+
+<p>
 	<strong>Login with Spotify</strong>. Contributed by @neo191987, slightly modified and documented by us.
 </p>
 
